--- a/sass/style.scss
+++ b/sass/style.scss
@@ -107,7 +107,7 @@ header {
 		align-items: center;
 		text-align: center;
 		h2 {
-			margin-top: 20px;
+			margin: 20px 25px 0 25px;
 			font-family: 'Fraunces', serif;
 			font-weight: 900;
 			font-size: 36px;
@@ -121,6 +121,7 @@ header {
 			line-height: 30px;
 		}
 		a {
+			margin-bottom: 35px;
 			position: relative;
 			text-decoration: none;
 			text-transform: uppercase;
@@ -154,12 +155,43 @@ header {
 			background-color: hsl(7, 99%, 70%);
 		}
 	}
-	.cherry-img {
+
+	.first-img-inner-text {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-content: center;
 		width: 100vw;
 		height: 200vw;
 		background-position: center;
 		background-size: cover;
+		h2 {
+			margin: 20px 25px 15px 25px;
+			font-family: 'Fraunces', serif;
+			font-weight: 900;
+			font-size: 32px;
+			text-transform: capitalize;
+			text-align: center;
+		}
+		p {
+			margin-bottom: 35px;
+			padding: 25px;
+			font-family: 'Barlow', sans-serif;
+			font-weight: 700;
+			font-size: 16px;
+			line-height: 25px;
+			text-align: center;
+		}
+	}
+	.cherry-img {
 		background-image: url('../images/mobile/image-graphic-design.jpg');
+		color: hsl(167, 40%, 24%);
+		grid-row: 5/6;
+	}
+	.orange-img {
+		background-image: url('../images/mobile/image-photography.jpg');
+		color: hsl(198, 62%, 26%);
+		grid-row: 6/7;
 	}
 }
 
