--- a/sass/style.scss
+++ b/sass/style.scss
@@ -178,7 +178,7 @@ header {
 			padding: 25px;
 			font-family: 'Barlow', sans-serif;
 			font-weight: 700;
-			font-size: 16px;
+			font-size: 18px;
 			line-height: 25px;
 			text-align: center;
 		}
@@ -192,6 +192,71 @@ header {
 		background-image: url('../images/mobile/image-photography.jpg');
 		color: hsl(198, 62%, 26%);
 		grid-row: 6/7;
+	}
+}
+
+.clients {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-content: center;
+	h3 {
+		margin: 60px 25px 50px 25px;
+		text-transform: uppercase;
+		text-align: center;
+		color: hsla(232, 10%, 55%, 0.671);
+		font-family: 'Fraunces', serif;
+		font-weight: 900;
+		font-size: 18px;
+		letter-spacing: 3px;
+	}
+	.client {
+		width: 100%;
+		margin: 25px auto;
+		.client-pic {
+			width: 70px;
+			height: 80px;
+			margin: 0 auto;
+			border-radius: 50%;
+			background-position: center;
+			background-size: cover;
+		}
+		.client-pic-one {
+			background-image: url('../images/image-emily.jpg');
+		}
+		.client-pic-two {
+			background-image: url('../images/image-thomas.jpg');
+		}
+		.client-pic-three {
+			background-image: url('../images/image-jennie.jpg');
+		}
+		.clients-text {
+			margin-top: 10px;
+			margin-bottom: 15px;
+			padding: 25px;
+			font-family: 'Barlow', sans-serif;
+			font-weight: 600;
+			font-size: 20px;
+			color: hsl(233, 7%, 48%);
+			text-align: center;
+			line-height: 30px;
+		}
+		.clients-sign {
+			margin-bottom: 15px;
+			font-family: 'Fraunces', serif;
+			font-weight: 900;
+			font-size: 22px;
+			text-align: center;
+		}
+		.clients-function {
+			margin-bottom: 25px;
+			text-align: center;
+			color: hsla(232, 10%, 55%, 0.671);
+			font-size: 16px;
+			font-family: 'Barlow', sans-serif;
+			font-weight: 600;
+		}
 	}
 }
 
