--- a/sass/style.scss
+++ b/sass/style.scss
@@ -260,6 +260,85 @@ header {
 	}
 }
 
+.second {
+	width: 100vw;
+	height: 100vw;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	.second-img {
+		background-size: cover;
+		background-position: center;
+		width: 100%;
+		height: 100%;
+	}
+	.second-one {
+		background-image: url('../images/mobile/image-gallery-milkbottles.jpg');
+		grid-column: 1/2;
+		grid-row: 1/2;
+	}
+	.second-two {
+		background-image: url('../images/mobile/image-gallery-orange.jpg');
+		grid-column: 2/3;
+		grid-row: 1/2;
+	}
+	.second-three {
+		background-image: url('../images/mobile/image-gallery-cone.jpg');
+		grid-column: 1/2;
+		grid-row: 2/3;
+	}
+	.second-four {
+		background-image: url('../images/mobile/image-gallery-sugar-cubes.jpg');
+		grid-column: 2/3;
+		grid-row: 2/3;
+	}
+}
+footer {
+	padding-top: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-content: center;
+	width: 100vw;
+	height: 100vw;
+	color: hsl(168, 34%, 41%);
+	background-color: #90d4c5;
+	text-align: center;
+	.footer-header {
+		padding: 35px 15px;
+		font-family: 'Barlow', sans-serif;
+		font-weight: 900;
+		font-size: 42px;
+		color: hsl(169, 32%, 30%);
+	}
+	.footer-links {
+		margin: 30px 25px 0 25px;
+		height: 100%;
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		a {
+			font-family: 'Barlow', sans-serif;
+			font-weight: 600;
+			font-size: 20px;
+			text-decoration: none;
+			cursor: pointer;
+			color: hsl(168, 34%, 41%);
+		}
+	}
+	.footer-icons {
+		display: flex;
+		flex: wrap;
+		justify-content: center;
+		margin-bottom: 75px;
+		a {
+			text-decoration: none;
+			margin: 0 12px;
+			cursor: pointer;
+		}
+	}
+}
+
 @keyframes arrow-bounce {
 	0% {
 		transform: translate(-50%, -50%);
