--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,14 +56,15 @@ header {
 }
 
 // NAVBAR---NAVBAR
-
+.nav-desktop {
+	display: none;
+}
 .nav-mobile {
 	position: fixed;
 	width: calc(100vw - 50px);
 	height: calc(100vw - 50px);
 	top: 110px;
 	left: 25px;
-
 	padding: 30px;
 	background-color: white;
 	z-index: 100;
@@ -88,7 +89,10 @@ header {
 	border-bottom: 5vw solid white;
 }
 .nav-launched {
-	animation: launch-mobile-nav 0.5s linear forwards;
+	animation: launch-mobile-nav 0.3s linear forwards;
+}
+.nav-turned-off {
+	animation: turn-off-mobile-nav 0.75s linear forwards;
 }
 
 .navbar-link {
@@ -98,13 +102,14 @@ header {
 	font-family: 'Barlow', sans-serif;
 	font-weight: 600;
 	font-size: 20px;
+	color: white;
 	text-align: center;
-	color: hsl(232, 10%, 55%);
 	background-color: transparent;
 	cursor: pointer;
 	transition: all 0.3s;
 }
 .navbar-link-mobile {
+	color: hsl(232, 10%, 55%);
 	margin: 0 auto;
 }
 .navbar-link-mobile:hover,
@@ -259,7 +264,7 @@ header {
 		margin: 25px auto;
 		.client-pic {
 			width: 70px;
-			height: 80px;
+			height: 70px;
 			margin: 0 auto;
 			border-radius: 50%;
 			background-position: center;
@@ -402,3 +407,14 @@ footer {
 		opacity: 1;
 	}
 }
+
+@keyframes turn-off-mobile-nav {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
+@import 'min768px';
