add media styling for screen width: - 768px - 992px - 1200px

--- a/sass/_min768px.scss
+++ b/sass/_min768px.scss
@@ -11,23 +11,11 @@
 			display: none;
 		}
 		h1 {
-			position: absolute;
-			top: 30%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			text-transform: uppercase;
-			color: white;
-			font-family: 'Fraunces', serif;
 			font-size: 64px;
-			font-weight: 900;
 			letter-spacing: 8px;
-			text-align: center;
 		}
 		p {
 			padding: 35px 30px;
-			color: white;
-			font-family: 'Cabin', sans-serif;
-			font-weight: 700;
 			font-size: 48px;
 		}
 	}
@@ -41,21 +29,19 @@
         position: absolute;
         top: 50px;
         right: 50px;
-        width: 75vw;
+        width: 60vw;
         display: flex;
         justify-content: flex-end;
-        font-size: 24px;
-        
     }
 
 	.navbar-link {
 		width: 130px;
-        margin: 0 15px;
-		padding: 15px;
+        margin: 0 5px;
+		padding: 10px;
 		border-radius: 27px;
 		font-family: 'Barlow', sans-serif;
 		font-weight: 600;
-		font-size: 24px;
+		font-size: 20px;
 		text-align: center;
 		background-color: transparent;
 		cursor: pointer;
@@ -98,6 +84,7 @@
 			grid-column: 1/2;
 		}
 		.first-text {
+			width: 50vw;
 			align-items: flex-start;
 			text-align: left;
 			h2 {
@@ -227,25 +214,15 @@
 		}
 	}
 	footer {
-		padding: 20px 40px;
-		width: 100vw;
-		height: 350px;
-		text-align: center;
 		.footer-header {
-			padding: 30px 15px;
-			font-family: 'Barlow', sans-serif;
-			font-weight: 900;
+			padding: 0 15px;
 			font-size: 48px;
-			color: hsl(169, 32%, 30%);
 		}
 		.footer-links {
-			margin: 30px 25px 0 25px;
-			height: 100%;
-			display: flex;
-			justify-content: space-around;
-			flex-wrap: wrap;
+			margin: 0 25px;
 			a {
 				font-size: 28px;
+				border-radius: 32px;
 			}
 		}
 		.footer-icons {
