--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ select {
   display: none;
 }
 
+.wrapper {
+  max-width: 992px;
+  margin: 0 auto;
+}
+
+body {
+  background-color: #3ebfff;
+}
+
 header {
   width: 100vw;
   height: 100vh;
@@ -154,10 +163,15 @@ header p {
   font-weight: 700;
 }
 
+main {
+  background-color: #3ebfff;
+}
+
 .first {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1.25fr 1fr 1.25fr 2fr 2fr;
+  background-color: white;
 }
 .first .first-img {
   width: 100vw;
@@ -276,6 +290,7 @@ header p {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-content: center;
+  background-color: #fff;
 }
 .clients h3 {
   margin: 60px 25px 50px 25px;
@@ -370,32 +385,33 @@ header p {
 }
 
 footer {
-  padding-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-content: center;
   width: 100vw;
-  height: 100vw;
+  height: 350px;
   color: hsl(168deg, 34%, 41%);
   background-color: #90d4c5;
   text-align: center;
 }
 footer .footer-header {
-  padding: 35px 15px;
+  padding: 0 15px;
   font-family: "Barlow", sans-serif;
   font-weight: 900;
   font-size: 42px;
   color: hsl(169deg, 32%, 30%);
 }
 footer .footer-links {
-  margin: 30px 25px 0 25px;
-  height: 100%;
+  margin: 0 25px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 footer .footer-links a {
+  padding: 15px;
+  background-color: transparent;
+  border-radius: 27px;
   font-family: "Barlow", sans-serif;
   font-weight: 600;
   font-size: 20px;
@@ -403,16 +419,22 @@ footer .footer-links a {
   cursor: pointer;
   color: hsl(168deg, 34%, 41%);
 }
+footer .footer-links a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
 footer .footer-icons {
   display: flex;
   flex: wrap;
   justify-content: center;
-  margin-bottom: 75px;
 }
 footer .footer-icons a {
   text-decoration: none;
   margin: 0 12px;
   cursor: pointer;
+  transition: transform 0.3s;
+}
+footer .footer-icons a:hover {
+  transform: scale(1.1);
 }
 
 @-webkit-keyframes arrow-bounce {
@@ -484,23 +506,11 @@ footer .footer-icons a {
     display: none;
   }
   header h1 {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-transform: uppercase;
-    color: white;
-    font-family: "Fraunces", serif;
     font-size: 64px;
-    font-weight: 900;
     letter-spacing: 8px;
-    text-align: center;
   }
   header p {
     padding: 35px 30px;
-    color: white;
-    font-family: "Cabin", sans-serif;
-    font-weight: 700;
     font-size: 48px;
   }
   .nav-mobile {
@@ -510,19 +520,18 @@ footer .footer-icons a {
     position: absolute;
     top: 50px;
     right: 50px;
-    width: 75vw;
+    width: 60vw;
     display: flex;
     justify-content: flex-end;
-    font-size: 24px;
   }
   .navbar-link {
     width: 130px;
-    margin: 0 15px;
-    padding: 15px;
+    margin: 0 5px;
+    padding: 10px;
     border-radius: 27px;
     font-family: "Barlow", sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
     background-color: transparent;
     cursor: pointer;
@@ -563,6 +572,7 @@ footer .footer-icons a {
     grid-column: 1/2;
   }
   .first .first-text {
+    width: 50vw;
     align-items: flex-start;
     text-align: left;
   }
@@ -687,28 +697,16 @@ footer .footer-icons a {
     grid-column: 2/3;
     grid-row: 2/3;
   }
-  footer {
-    padding: 20px 40px;
-    width: 100vw;
-    height: 350px;
-    text-align: center;
-  }
   footer .footer-header {
-    padding: 30px 15px;
-    font-family: "Barlow", sans-serif;
-    font-weight: 900;
+    padding: 0 15px;
     font-size: 48px;
-    color: hsl(169deg, 32%, 30%);
   }
   footer .footer-links {
-    margin: 30px 25px 0 25px;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    margin: 0 25px;
   }
   footer .footer-links a {
     font-size: 28px;
+    border-radius: 32px;
   }
   footer .footer-icons {
     margin-bottom: 20px;
@@ -718,5 +716,250 @@ footer .footer-icons a {
   }
   footer .footer-icons a img {
     width: 36px;
+  }
+}
+@media (min-width: 992px) {
+  header {
+    width: 100vw;
+    margin: 0 auto;
+    border-bottom: 3px solid hsl(7deg, 99%, 70%);
+  }
+  header h1 {
+    font-size: 72px;
+    font-weight: 900;
+    letter-spacing: 9px;
+    text-align: center;
+  }
+  header p {
+    padding: 35px 30px;
+    font-size: 52px;
+  }
+  .navbar-link {
+    width: 130px;
+    margin: 0 10px;
+    padding: 10px;
+    border-radius: 27px;
+    font-size: 26px;
+  }
+  .navbar-link:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+  }
+  .first {
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+  .first .first-text {
+    width: 496px;
+  }
+  .first .first-img {
+    width: 496px;
+    height: 496px;
+    background-position: center;
+    background-size: cover;
+  }
+  .first .first-img-one {
+    background-image: url("../images/desktop/image-transform.jpg");
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+  .first .first-text-one {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+  .first .first-text-two {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .first .first-img-two {
+    background-image: url("../images/desktop/image-stand-out.jpg");
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .first .first-text {
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+  }
+  .first .first-text h2 {
+    margin: 15px 30px 40px 70px;
+    font-size: 38px;
+  }
+  .first .first-text p {
+    margin-left: 35px;
+    padding: 20px 30px 40px 35px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+  }
+  .first .first-text a {
+    margin-bottom: 25px;
+    margin-left: 70px;
+    font-size: 18px;
+    letter-spacing: 3px;
+  }
+  .first .first-img-inner-text {
+    width: 496px;
+    height: 496px;
+  }
+  .first .first-img-inner-text h2 {
+    margin: 30px 25px 5px 25px;
+    font-size: 36px;
+  }
+  .first .first-img-inner-text p {
+    margin-bottom: 10px;
+    padding: 20px 30px;
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .clients {
+    width: 992px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: center;
+  }
+  .clients h3 {
+    margin: 60px 25px 35px 25px;
+    font-size: 36px;
+    letter-spacing: 4px;
+  }
+  .clients .client {
+    width: 992px;
+    margin: 25px auto;
+  }
+  .clients .client .client-pic {
+    width: 110px;
+    height: 110px;
+  }
+  .clients .client .clients-text {
+    margin: 15px auto;
+    padding: 25px;
+    font-size: 26px;
+    text-align: center;
+    line-height: 34px;
+  }
+  .clients .client .clients-sign {
+    margin-bottom: 15px;
+    font-size: 28px;
+    text-align: center;
+  }
+  .clients .client .clients-function {
+    margin-bottom: 30px;
+    font-size: 22px;
+  }
+  .second {
+    width: 992px;
+    height: 992px;
+  }
+  footer {
+    width: 992px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  .wrapper {
+    max-width: 1200px;
+  }
+  header {
+    width: 1200px;
+    margin: 0 auto;
+  }
+  .navbar-link {
+    width: 130px;
+    margin: 0 15px;
+    padding: 10px;
+    font-size: 28px;
+  }
+  .first .first-text {
+    width: 600px;
+  }
+  .first .first-img {
+    width: 600px;
+    height: 600px;
+  }
+  .first .first-img-inner-text {
+    width: 600px;
+    height: 600px;
+  }
+  .clients {
+    width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.3fr 2fr;
+  }
+  .clients h3 {
+    margin: 60px 25px 35px 25px;
+    font-size: 36px;
+    letter-spacing: 4px;
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  .clients .client-one {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .clients .client-two {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .clients .client-three {
+    grid-row: 2/3;
+    grid-column: 3/4;
+  }
+  .clients .client {
+    width: 400px;
+    margin: 25px 0;
+  }
+  .clients .client .client-pic {
+    width: 110px;
+    height: 110px;
+  }
+  .clients .client .clients-text {
+    margin: 15px auto;
+    width: 90%;
+    padding: 25px 0;
+    font-size: 22px;
+    text-align: center;
+    line-height: 34px;
+  }
+  .clients .client .clients-sign {
+    margin-bottom: 15px;
+    font-size: 28px;
+    text-align: center;
+  }
+  .clients .client .clients-function {
+    margin-bottom: 30px;
+    font-size: 22px;
+  }
+  .second {
+    width: 1200px;
+    height: 600px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  .second .second-img {
+    width: 100%;
+    height: 600px;
+  }
+  .second .second-one {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .second .second-two {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .second .second-three {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .second .second-four {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
+  footer {
+    height: 300px;
+    width: 1200px;
   }
 }/*# sourceMappingURL=style.css.map */
